syntax = "proto3";

option go_package = "master";
option java_multiple_files = true;
option java_package = "master.grpc.master";
option java_outer_classname = "MasterProto";

package master;

// The greeting service definition.
service Greeter {
  // receive a grpc_server address and set to etcd.
  rpc ReportAddress (Request) returns (Reply) {}

  // send a grpc_server address to client
  rpc GetAddress (EmptyRequest) returns (Request) {}
}

// The request message containing the user's name.
message Request {
  string address = 1;
}

message EmptyRequest {

}

// The response message containing the greetings
message Reply {
  bool status = 1;
}
